fixed alignment issue

--- a/assets/scss/_footer.scss
+++ b/assets/scss/_footer.scss
@@ -52,7 +52,7 @@
 
     .footer-links {
       margin-bottom: 30px;
-      margin-left: 3rem;
+  
       ul{
         list-style: none;
         padding: 0;
