--- a/assets/scss/_general.scss
+++ b/assets/scss/_general.scss
@@ -4,10 +4,13 @@
 body {
   font-family: $font-default;
   color: $default;
+
+  
 }
 
 body::-webkit-scrollbar{
   display: none;
+  
 }
 
 a {
@@ -31,7 +34,7 @@ h1, h2, h3, h4, h5, h6 {
   position: fixed;
   visibility: hidden;
   opacity: 0;
-  right:15px;
+  right:45px;
   bottom: 15px;
   z-index: 996;
   background: $primary;
@@ -58,36 +61,6 @@ h1, h2, h3, h4, h5, h6 {
 
 }
 
-.back-to-top-call {
-  position: fixed;
-  visibility: hidden;
-  opacity: 0;
-  right:75px;
-  bottom: 15px;
-  z-index: 996;
-  background: $secondary;
-  width: 40px;
-  height: 40px;
-  border-radius: 4px;
-  transition: all 0.4s;
-
-  i {
-    font-size: 24px;
-    color: #fff;
-    line-height: 0;
-  }
-
-  &:hover  {
-    background: lighten($primary, 8);
-    color: #fff;
-  }
-
-  &.active {
-    visibility: visible;
-    opacity: 1;
-  }
-
-}
 
 
 
