--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -172,7 +172,7 @@
 @media (max-width: 991px) {
 
   .mobile-nav-toggle {
-    display: block;
+    display: flex;
   }
 
   .navbar ul {
@@ -184,7 +184,7 @@
 .navbar-mobile {
 
   position: fixed;
-  overflow: hidden;
+  overflow-x: hidden;
   top: 0;
   right: 0;
   left: 0;
